--- a/Presentation/Nop.Web/Nop.Web.csproj
+++ b/Presentation/Nop.Web/Nop.Web.csproj
@@ -658,6 +658,60 @@
     <Content Include="Scripts\selectivizr.min.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Scripts\_references.js" />
+    <Content Include="Themes\CustomizedTheme\Content\css\ie8.css" />
+    <Content Include="Themes\CustomizedTheme\Content\css\print.css" />
+    <Content Include="Themes\CustomizedTheme\Content\css\styles.css" />
+    <Content Include="Themes\CustomizedTheme\Content\css\styles.rtl.css" />
+    <Content Include="Themes\CustomizedTheme\Content\images\ajax-loader-small.gif" />
+    <Content Include="Themes\CustomizedTheme\Content\images\back-button.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\calendar-next.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\calendar-prev.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\close.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\compare-button.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\details.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\discontinued-product-icon.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\download-button.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\edit.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\edit_.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\email-button.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\first.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\ie_warning.jpg" />
+    <Content Include="Themes\CustomizedTheme\Content\images\last.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\loading.gif" />
+    <Content Include="Themes\CustomizedTheme\Content\images\logo.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\menu-icon.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\move.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\new.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\next.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\pointer.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\prev.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\rating1.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\rating2.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\remove.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\remove_.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\reply.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\retry.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\return.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\rss.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\shipping.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\shopping-bag.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\social-sprite.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\subscribe-button.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\toggle-black.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\toggle-gray.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\toggle-white.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\topic-type1.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\topic-type2.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\topic-type3.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\view-grid.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\view-list.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\vote-down-selected.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\vote-down.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\vote-up-selected.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\vote-up.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\watch.png" />
+    <Content Include="Themes\CustomizedTheme\Content\images\wishlist-button.png" />
+    <Content Include="Themes\CustomizedTheme\preview.jpg" />
     <Content Include="Themes\DefaultClean\Content\css\ie8.css" />
     <Content Include="Themes\DefaultClean\Content\css\styles.css" />
     <Content Include="Themes\DefaultClean\Content\css\styles.rtl.css" />
@@ -1029,6 +1083,9 @@
     <Content Include="Views\Vendor\Info.cshtml" />
     <Content Include="Views\Common\Logo.cshtml" />
     <Content Include="Views\Customer\EmailRevalidation.cshtml" />
+    <Content Include="Themes\CustomizedTheme\theme.config" />
+    <Content Include="Themes\CustomizedTheme\Views\Shared\Head.cshtml" />
+    <Content Include="Themes\CustomizedTheme\Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Plugins\bin\" />
