Add BizManagement: Nop.Core.Domain, Nop.Services

--- a/Libraries/Nop.Core/Nop.Core.csproj
+++ b/Libraries/Nop.Core/Nop.Core.csproj
@@ -64,6 +64,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -105,6 +106,31 @@
     <Compile Include="Caching\RedisCacheManager.cs" />
     <Compile Include="ComponentModel\GenericDictionaryTypeConverter.cs" />
     <Compile Include="ComponentModel\WriteLockDisposable.cs" />
+    <Compile Include="Domain\BizManagement\AccountBalanceResult.cs" />
+    <Compile Include="Domain\BizManagement\CF_Acct.cs" />
+    <Compile Include="Domain\BizManagement\CF_Carrier.cs" />
+    <Compile Include="Domain\BizManagement\CF_Obj.cs" />
+    <Compile Include="Domain\BizManagement\CF_SalesReturnReason.cs" />
+    <Compile Include="Domain\BizManagement\CF_SalesSource.cs" />
+    <Compile Include="Domain\BizManagement\CF_Store.cs" />
+    <Compile Include="Domain\BizManagement\Enums.cs" />
+    <Compile Include="Domain\BizManagement\GeneralLedgerLineResult.cs" />
+    <Compile Include="Domain\BizManagement\GeneralLedgerResult.cs" />
+    <Compile Include="Domain\BizManagement\InventoryAdjLineResult.cs" />
+    <Compile Include="Domain\BizManagement\InventoryAdjResult.cs" />
+    <Compile Include="Domain\BizManagement\InventoryTransactionResult.cs" />
+    <Compile Include="Domain\BizManagement\InventoryTransferLineResult.cs" />
+    <Compile Include="Domain\BizManagement\InventoryTransferResult.cs" />
+    <Compile Include="Domain\BizManagement\IVM_Barcode.cs" />
+    <Compile Include="Domain\BizManagement\POS_SalesOrder.cs" />
+    <Compile Include="Domain\BizManagement\PurchaseInvoiceDetailLineResult.cs" />
+    <Compile Include="Domain\BizManagement\PurchaseInvoiceResult.cs" />
+    <Compile Include="Domain\BizManagement\SalesOrderDetailLineResult.cs" />
+    <Compile Include="Domain\BizManagement\SalesOrderResult.cs" />
+    <Compile Include="Domain\BizManagement\SalesOrderSearchDTO.cs" />
+    <Compile Include="Domain\BizManagement\UpdatedSalesOrderDTO.cs" />
+    <Compile Include="Domain\BizManagement\WarehouseCountLineResult.cs" />
+    <Compile Include="Domain\BizManagement\WarehouseCountResult.cs" />
     <Compile Include="Domain\Blogs\Events.cs" />
     <Compile Include="Domain\Common\DisplayDefaultMenuItemSettings.cs" />
     <Compile Include="Domain\Catalog\ProductEditorSettings.cs" />
