--- a/Presentation/Nop.Web/Administration/sitemap.config
+++ b/Presentation/Nop.Web/Administration/sitemap.config
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <siteMap>
   <siteMapNode SystemName="Home" nopResource="Admin.Home" controller="Home" action="Overview">
-    <siteMapNode SystemName="Dashboard" nopResource="Admin.Dashboard" controller="Home" action="Index" IconClass="fa-desktop" />
+    <siteMapNode SystemName="Dashboard" nopResource="Admin.Dashboard" controller="Home" action="Index" IconClass="fa-desktop" />    
+    <siteMapNode SystemName="BizManagement" nopResource="BizManagement" IconClass="fa-suitcase">
+      <siteMapNode SystemName="Quản lý đơn hàng" nopResource="BizManagement.SalesOrders" PermissionNames="" controller="BizManagement" action="SalesOrders" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Kiểm kê tồn kho" nopResource="BizManagement.WarehouseCount" PermissionNames="" controller="BizManagement" action="WarehouseCount" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Quản lý mua hàng" nopResource="BizManagement.PurchaseInvoices" PermissionNames="" controller="BizManagement" action="PurchaseInvoices" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Điều chỉnh tồn kho" nopResource="BizManagement.InventoryAdjustment" PermissionNames="" controller="BizManagement" action="InventoryAdjustment" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Nhật ký chung" nopResource="BizManagement.GeneralLedger" PermissionNames="" controller="BizManagement" action="GeneralLedger" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Bản cân đối tài khoản" nopResource="BizManagement.AccountBalance" PermissionNames="" controller="BizManagement" action="AccountBalance" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Vận đơn" nopResource="BizManagement.InventoryTransfer" PermissionNames="" controller="BizManagement" action="InventoryTransfer" IconClass="fa-dot-circle-o"/>
+      <siteMapNode SystemName="Giao dịch kho" nopResource="BizManagement.InventoryTransactions" PermissionNames="" controller="BizManagement" action="InventoryTransactions" IconClass="fa-dot-circle-o"/>
+    </siteMapNode>  
     <siteMapNode SystemName="Catalog" nopResource="Admin.Catalog" PermissionNames="ManageProducts,ManageCategories,ManageManufacturers,ManageProductReviews,ManageProductTags,ManageAttributes" IconClass="fa-book" >
       <siteMapNode SystemName="Products" nopResource="Admin.Catalog.Products" PermissionNames="ManageProducts" controller="Product" action="List" IconClass="fa-dot-circle-o"/>
       <siteMapNode SystemName="Categories" nopResource="Admin.Catalog.Categories" PermissionNames="ManageCategories" controller="Category" action="List" IconClass="fa-dot-circle-o"/>
